--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,20 +4,25 @@
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
-body {
-  background: rgb(84, 94, 230);
-  background: linear-gradient(
-    176deg,
-    rgba(84, 94, 230, 1) 0%,
-    rgba(9, 71, 213, 1) 54%,
-    rgba(5, 19, 255, 1) 100%
-  );
+html {
+  background: #0047AB;
 }
 
-/* * {
-  background: #000 !important;
-  color: #0f0 !important;
-  outline: solid #f00 1px !important;
-} */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(155 155 160 / 50%);
+  border-radius: 10px;
+}
